[package]
name = "advent-of-rust-2023"
version = "0.1.0"
edition = "2021"
authors = ["James Youngman <james@youngman.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
regex = "1"
itertools = "0.12"
priority-queue = "1.3"
num = "0.4"
bimap = "0"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "day01"
[[bin]]
name = "day02"
[[bin]]
name = "day03"
[[bin]]
name = "day04"
[[bin]]
name = "day05"
[[bin]]
name = "day06"
[[bin]]
name = "day07"
[[bin]]
name = "day08"
[[bin]]
name = "day09"
[[bin]]
name = "day10"
[[bin]]
name = "day11"
[[bin]]
name = "day13"
[[bin]]
name = "day14"
